--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
 * {
     background-color: beige;
 }
+
+.main-container{
+    background-color: antiquewhite;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+}
+
+.selection-container{
+    width: 300px;
+    background-color: black;
+    min-height: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: .5%;
+}
+
+.view-container{
+    flex-direction: row;
+    width: 600px;
+    height: 800px;
+    background-color: blue;
+}
+
+.selection-item{
+    border-radius: 5px;
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+
+}
+
+.selection-item-image{
+    width: 40px;
+    height: 40px;
+    background-color: brown;
+    border-radius: 5px;
+    padding: 1.5%;
+}
+
+.selection-item-text{
+    border-radius: 5px;
+    padding: 1.5%;
+    font-size: x-large;
+}
