--- a/style.css
+++ b/style.css
@@ -17,27 +17,28 @@ body {
 }
 
 .view-container {
-    width: 400px;
-    border-radius: 2%
+    width: 600px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .view-container img{
-    width: auto;
-    height: auto;
-    min-width: 400px;
-    max-width: 400px;
-    border-radius: 2%
+    width: 600px;
+    height: 800px;
+    object-fit: cover;
+    border-radius: 1%
 }
 
 .selection-item{
     width: 300px;
-    margin-top: 2%;
+    margin-top: 1%;
     background-color: transparent;
     border-radius: 5px;
-    padding: 0px 10px 8px 10px;
+    padding: 0px 5px 5px 10px;
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
    
     
 }
@@ -49,7 +50,7 @@ body {
 }
 
 .selection-item-element{
-    margin-top: 5%;
+    margin-top: 2%;
     background-color: transparent;
     border-radius: 5px;
     padding: 0px;
