--- a/style.css
+++ b/style.css
@@ -60,8 +60,13 @@ body {
 }
 
 
-input
+textarea
 {
     background: transparent;
     border: none;
+    column-span: auto;
+    height: fit-content;
+    font-size:1.3em; 
+    padding:.5em; 
+    max-width: 90%;
 }
