--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-image: linear-gradient(90deg, #b6b6b6 0%, #ffffff 35%, #ebebeb 100%);
     font-family: Arial, Helvetica, sans-serif;
+    padding-top: 5%;
 
 }
 
@@ -12,7 +13,7 @@ body {
 }
 
 .selection-container{
-    min-width: 300px;
+    width: 300px;
     min-height: 200px;
     display: inline;
     padding: .5%;
@@ -60,6 +61,7 @@ body {
     height: 40px;
     width: 40px;
     border-radius: 10%;
+    object-fit: cover;
 }
 
 .selection-item-element{
