--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-image: linear-gradient(90deg, #b6b6b6 0%, #ffffff 35%, #ebebeb 100%);
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 5%;
-
+    font-weight: bold;
 }
 
 .main-container{
@@ -48,12 +48,10 @@ body {
     margin-top: 1%;
     background-color: transparent;
     border-radius: 5px;
-    padding: 0px 5px 5px 10px;
+    padding: 0px 1px 5px 10px;
     display: flex;
     flex-direction: row;
     gap: 10px;
-    font-weight: normal;
-   
     
 }
 
@@ -93,4 +91,12 @@ textarea:focus {
     
     /* border-color: #719ECE; 
     box-shadow: 0 0 10px #719ECE; */
+}
+
+
+.sampleDiv {
+    width: 250px;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
 }
